[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-motion-planning"
version = "1.1.1"
description = "Motion planning algorithms for Python"
maintainers = [
    {name = "Yang Haodong"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "ipython",
    "ipykernel",
    "scipy",
    "matplotlib",
    "cvxopt",
    "osqp",
    "tqdm",
    "pyyaml (>=6.0.2,<7.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocstrings (>=0.30.0,<0.31.0)",
    "mkdocstrings-python (==1.12.2)",
    "mkdocs-material (>=9.6.18,<10.0.0)",
    "mike (>=2.1.3,<3.0.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)"
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Repository = "https://github.com/ai-winter/python_motion_planning"

[tool.setuptools.packages.find]
where = ["src"]